# sphinx-gui3

./: .gitignore  README.md  README.rst  requirements.txt  setup.cfg  setup.py
src/: __init__.py  sphinx_gui3.py
src/examples/: example_1.rst  example_2.rst  example_3.rst  index.rst
src/gui/: Editor.py  Preview.py  Tree.py
src/info/: appdata.py
src/pycore/: Content.py  Document.py  Environment.py  Rst2PdfBuilder.py  SphinxBuilder.py  app_utils.py  create_index_content.py  help_content.py  markup_utils.py
src/pycore/sphinx_conf_template/: conf_base.py  conf_base_jrd.py  conf_tebe_custom.py
src/pycore/sphinx_conf_template/basic_like_paper/: conf.py
src/pycore/sphinx_conf_template/classic_like_web/: conf.py
src/pycore/sphinx_conf_template/sphinx_rtd_theme/: conf.py
src/pycore/sphinx_conf_template/sphinxdoc_like_web/: conf.py
tests/: a.py  add_tebe_to_sys_path.py  example_sphinx_dir_content_path.py  test_Content.py  test_Document.py  test_Rst2PdfBuilder.py  test_SphinxBuilder.py
tests/example_sphinx_dir_content/: about.rst  contact.rst  dane.rst  example.rst  features.rst  in_action.rst  index.rst  install.rst
