[metadata]
name = sphinxgui3
version = attr: src.__version__
author = Lukasz Laba
author_email = lukaszlaba@gmail.com.pl
python_requires = >3
description = Sphinxgui (aka Tebe) is a powerful editor for reStructuredText markup languages using Sphinx
long_description = file: README.rst
keywords = sphinx, restructuredtext, markdown, markup
license=GNU General Public License (GPL)
classifiers=
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Documentation :: Sphinx
    Topic :: Office/Business
    Topic :: Text Editors
url = https://tebe.readthedocs.io

[options]
zip_safe = false
include_package_data = true
packages = find:
test_suite = tests
setup_requires =
    setuptools
install_requires =
    PyQtWebEngine
    PyQt5
    mistune
    sphinx
    rst2pdf
    docutils
    recommonmark
    setuptools

[options.packages.find]
exclude =
    src.examples
    tests
    dist
    build
    docs
    data

[options.entry_points]
console_scripts =
    sphinx-gui3 = src:main

[options.package_data]
* = *.png, *.rst, *.md

[bdist_wheel]
universal = true



